# c2_pilot_ddp

./: CMakeLists.txt  package.xml
cfg/: configg.cfg  mavros_ctrl.cfg
doc/: Report.tex  biblio.bib
launch/: ddp.launch
msg/: CtrlTraj.msg
src/: pilot_ddp.cpp  pilot_ddp2.cpp
